--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.0.0-beta3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "laravel-vue-pagination": "^2.3.1",
     "vue": "^2.6.12",
     "vue-router": "^3.2.0",
     "vue-toastify": "^1.8.0",
